Edit users failure message